--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ title: Sohesh's blog
 theme: jekyll-theme-cayman
 github:
   is_project_page: false
+  is_user_page: true
+  owner_name: Sohesh
+  owner_url: https://soheshts.github.io/
+  owner_gravatar_url: https://soheshts.github.io/images/me.jpg
