--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sohesh's blog
-remote_theme: wowthemesnet/mediumish-theme-jekyll
+remote_theme: chesterhow/tale
 github:
   is_project_page: false
   is_user_page: true
