--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ github:
   owner_url: https://soheshts.github.io/
   owner_gravatar_url: https://soheshts.github.io/images/me.jpg
 
-theme: jekyll-theme-hacker
+theme: jekyll-theme-cayman
